--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nzwhale.github.io/itsabouttime/",
+  "homepage": "https://nzwhale.github.io/itsabouttime",
   "name": "itsabouttime",
   "version": "0.1.0",
   "private": true,
